--- a/index.html
+++ b/index.html
@@ -56,16 +56,15 @@
   <header class="masthead d-flex">
     <div class="container text-center my-auto">
       <h2 class="mb-1"style="color:white">
-        <em>전국 주민자치 담당 임기제 공무원,전문지원기관</em>
+        <em></em>
       </h2>
-      <h1 class="mb-1"style="color:white">2020 온라인 교육</h1>
+      <h1 class="mb-1"style="color:white"></h1>
       <h6 class="mb-5"style="color:#FFFC79">
-        <em>행정안전부 주민자치형 주민복지서비스개편추진단</em>
+        <em></em>
       </h6>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://form.office.naver.com/form/responseView.cmd?formkey=NGJiNmVhZjItZmVhZi00MzdmLTlkNzAtNjJjOGU2ZWY3MWQ5&sourceId=urlshare" target="_blank">교육접수</a>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1KEjEdK3bdiLi4nTjUmSMrOBX8pk3JxwY/view?usp=sharing" target="_blank">공지사항</a>
-      <a class="btn btn-primary btn-xl" href="https://drive.google.com/file/d/1KEb4y8CPSBUzqMbdg-ieIbAqC33ai4-l/view?usp=sharing"target="_blank">줌사용법</a>
-      <a class="btn btn-primary btn-xl" href="https://zoom.us/j/95138738272" target="_blank">화상강의</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://form.office.naver.com/form/responseView.cmd?formkey=NGJiNmVhZjItZmVhZi00MzdmLTlkNzAtNjJjOGU2ZWY3MWQ5&sourceId=urlshare" target="_blank">총회 자료집</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1KEjEdK3bdiLi4nTjUmSMrOBX8pk3JxwY/view?usp=sharing" target="_blank">온라인 투표</a>
+
     </div>
     <div class="overlay"></div>
   </header>
