--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       <h6 class="mb-5"style="color:#FFFC79">
         <em></em>
       </h6>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://form.office.naver.com/form/responseView.cmd?formkey=NGJiNmVhZjItZmVhZi00MzdmLTlkNzAtNjJjOGU2ZWY3MWQ5&sourceId=urlshare" target="_blank">총회 자료집</a>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1KEjEdK3bdiLi4nTjUmSMrOBX8pk3JxwY/view?usp=sharing" target="_blank">온라인 투표</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://form.office.naver.com/form/responseView.cmd?formkey=NGJiNmVhZjItZmVhZi00MzdmLTlkNzAtNjJjOGU2ZWY3MWQ5&sourceId=urlshare" target="_blank">온라인 투표</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1uvTvx6ONW-KI-upEpf4SiQZcvuU0ef0C/view?usp=sharing" target="_blank">총회 자료집</a>
 
     </div>
     <div class="overlay"></div>
