--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>진잠동 주민총회</title>
+  <title>진잠동 주민자치회</title>
 
   <!-- Bootstrap Core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -35,19 +35,13 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">AROUND Korea</a>
+        <a class="js-scroll-trigger" href="#page-top">진잠동 주민자차회</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="https://aroundkorea.co.kr"target="_blank">Home</a>
+        <a class="js-scroll-trigger" href="https://www.yuseong.go.kr/?page_id=12068"target="_blank">진잠동 주민센터</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="https://blog.naver.com/aroundkorea"target="_blank">blog</a>
-      </li>
-      <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="https://www.facebook.com/aroundkorea920/"target="_blank">facebook</a>
-      </li>
-      <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="https://www.instagram.com/aroundkorea_/?hl=ko"target="_blank">instagram</a>
+        <a class="js-scroll-trigger" href="http://www.yuseong.go.kr/?home=Y"target="_blank">유성구홈페이지</a>
       </li>
     </ul>
   </nav>
@@ -63,7 +57,7 @@
         <em></em>
       </h6>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://form.office.naver.com/form/responseView.cmd?formkey=NGJiNmVhZjItZmVhZi00MzdmLTlkNzAtNjJjOGU2ZWY3MWQ5&sourceId=urlshare" target="_blank">온라인 투표</a>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1uvTvx6ONW-KI-upEpf4SiQZcvuU0ef0C/view?usp=sharing" target="_blank">총회 자료집</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1NhyEvyPIr8Kf9ZrJsnpmbxvQeyQBhKHw/view?usp=sharing" target="_blank">총회 자료집</a>
 
     </div>
     <div class="overlay"></div>
