--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <footer class="footer text-center">
     <div class="container">
       <section class="hosting-consult">
-          <header style="color:red">Question? 010-9736-1009</header>
+          <header style="color:red"></header>
       </section>
       <p class="text-muted small mb-0">AROUND Korea &copy; www.aroundkorea.co.kr</p>
     </div>
