--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
       <li class="sidebar-brand">
-        <a class="js-scroll-trigger" href="#page-top">진잠동 주민자차회</a>
+        <a class="js-scroll-trigger" href="#page-top">진잠동 주민자치회</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="https://www.yuseong.go.kr/?page_id=12068"target="_blank">진잠동 주민센터</a>
+        <a class="js-scroll-trigger" href="https://www.yuseong.go.kr/?page_id=12068"target="_blank">진잠동 행정복지센터</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="http://www.yuseong.go.kr/?home=Y"target="_blank">유성구홈페이지</a>
