--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 
 <head>
-
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -20,7 +19,7 @@
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
   <!-- Custom CSS -->
-  <link href="css/stylish-portfolio.min.css" rel="stylesheet">
+  <link href="css/my stylish-portfolio.min.css" rel="stylesheet">
   <style>
     .btn {margin: 2px;}
   </style>
@@ -49,24 +48,24 @@
 
   <!-- Header -->
   <header class="masthead d-flex">
-    <div class="container text-center my-auto">
-      <h2 class="mb-1"style="color:white">
-        <em></em>
-      </h2>
-      <h1 class="mb-1"style="color:white"></h1>
-      <h6 class="mb-5"style="color:#FFFC79">
-        <em></em>
-      </h6>
+    <div class="container">
+    <div class="top-img">
+        <img src="img/top-img.jpg">
+    </div>
+     <div class="item">
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://form.office.naver.com/form/responseView.cmd?formkey=NGJiNmVhZjItZmVhZi00MzdmLTlkNzAtNjJjOGU2ZWY3MWQ5&sourceId=urlshare" target="_blank">온라인 투표</a>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/17oOu9JNBZgwg7QyCg3Q19UwtN7u1W3wd/view?usp=sharing" target="_blank">총회 자료집</a>
-
+      </div> 
+      <div class="bottom-img">
+        <img src="img/bottom-img.jpg">
+    </div>       
     </div>
     <div class="overlay"></div>
   </header>
 
   <!-- Footer -->
   <footer class="footer text-center">
-    <div class="container">
+    <div class="container_2">
       <section class="hosting-consult">
           <header style="color:red"></header>
       </section>
