--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <meta name="description" content="진잠동 주민자치회입니다. 마을과 사람을 잇다">
   <meta name="author" content="진잠동주민자치회">
  <meta name="keywords" content="진잠동주민자치회, 진잠동, 유성구진잠동,유성구진잠동주민자치회">
+<meta property="og:type" content="website"> 
+<meta property="og:title" content="진잠동주민자치회">
+<meta property="og:description" content="유성구 진잠동 주민자치회입니다">
+<meta property="og:image" content="">
+<meta property="og:url" content="http://진잠동주민자치회.kr">
+    
  <meta name="naver-site-verification" content="b8f2445be6fb206a18bd8fc7656a7726f50765b0" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175170497-2"></script>
