--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <img src="img/top-img.jpg">
     </div>
      <div class="item">
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://form.office.naver.com/form/responseView.cmd?formkey=NGJiNmVhZjItZmVhZi00MzdmLTlkNzAtNjJjOGU2ZWY3MWQ5&sourceId=urlshare" target="_blank">온라인 투표</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1aPpTaeJtja1TOecdR2MlPrYgB-NkyC0H/view?usp=sharing" target="_blank">총회 결과</a>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/17oOu9JNBZgwg7QyCg3Q19UwtN7u1W3wd/view?usp=sharing" target="_blank">총회 자료집</a>
          <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1au9MVf7kOIubByCIvOmxn0opX1JOM0e9/view?usp=sharing" target="_blank">홍보 영상</a>
       </div> 
