--- a/index.html
+++ b/index.html
@@ -68,15 +68,16 @@
   <header class="masthead d-flex">
     <div class="container">
     <div class="top-img">
-        <img src="img/top-img.jpg">
+        <img src="img/top-img.png">
     </div>
      <div class="item">
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1aPpTaeJtja1TOecdR2MlPrYgB-NkyC0H/view?usp=sharing" target="_blank">총회 결과</a>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/17oOu9JNBZgwg7QyCg3Q19UwtN7u1W3wd/view?usp=sharing" target="_blank">총회 자료집</a>
-         <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1au9MVf7kOIubByCIvOmxn0opX1JOM0e9/view?usp=sharing" target="_blank">홍보 영상</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://drive.google.com/file/d/1au9MVf7kOIubByCIvOmxn0opX1JOM0e9/view?usp=sharing" target="_blank">홍보 영상</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="https://zoom.us/" target="_blank">온라인 회의</a>
       </div> 
       <div class="bottom-img">
-        <img src="img/bottom-img.jpg">
+        <img src="img/bottom-img.png">
     </div>       
     </div>
     <div class="overlay"></div>
@@ -88,7 +89,7 @@
       <section class="hosting-consult">
           <header style="color:red"></header>
       </section>
-      <p class="text-muted small mb-0">AROUND Korea &copy; www.aroundkorea.co.kr</p>
+      <p class="text-muted small mb-0">진잠동 행정복지센터 &copy; 진잠동 주민자치회</p>
     </div>
   </footer>
 
